Fix Features button overlay on mobile

--- a/css/buckshot.css
+++ b/css/buckshot.css
@@ -88,6 +88,9 @@
 #settingsButton {
     position: fixed;
     bottom: 20px;
+    /* Adjust for devices with on-screen navigation bars or notches */
+    bottom: calc(20px + constant(safe-area-inset-bottom));
+    bottom: calc(20px + env(safe-area-inset-bottom));
     left: 20px;
     z-index: 1100;
 }
